--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,81 @@
 .main {
-  background-color: rgb(240, 240, 240);
+  background-color: rgb(255, 255, 255);
   margin-top: 100px;
   min-height: calc(100vh - 100px - 50px);
   padding: 20px;
 }
 
 .footer {
-  background-color: rgb(226, 226, 226);
+  background-color: rgb(224, 224, 224);
   height: 50px;
   display: flex;
   justify-content: center;
   align-items: center;
+  position: relative;
+  z-index: 2;
 }
 
 .footer a {
   text-decoration: none;
   color: black;
+}
+
+.h-center {
+  margin: 0 auto;
+}
+
+.w-600 {
+  width: 600px;
+}
+
+.form-title {
+  font-size: 1.8rem;
+  text-align: center;
+  margin: 10px;
+}
+
+.form {
+  width: 100%;
+}
+
+.form input, .form label {
+  display: block;
+  width: 100%;
+  margin: 8px 0;
+  font-size: 1.1rem;
+}
+
+.form input {
+  margin-bottom: 16px;
+  font-size: 1rem;
+  padding: 12px;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+  border: 2px solid rgba(184, 184, 184, 0.294);
+  outline: none;
+}
+
+.form button {
+  display: block;
+  color: rgb(255, 255, 255);
+  border: none;
+  border: 2px solid rgb(90, 90, 255);
+  background-color: rgb(90, 90, 255);
+  color: white;
+  font-weight: bold;
+  padding: 12px 32px;
+  font-size: 1.2rem;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+  cursor: pointer;
+}
+
+.form button:hover {
+  background-color: rgb(110, 110, 255);
 }
