--- a/src/App.css
+++ b/src/App.css
@@ -217,3 +217,22 @@ td.negative {
   -ms-border-radius: 5px;
   -o-border-radius: 5px;
 }
+.flex-column {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.flex-column > * {
+  margin: 20px;
+}
+
+.price-history {
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin-bottom: 0;
+}
+
+.company-name {
+  font-size: 1.23rem;
+}
